[fix] fixes top navbar for blog posts that had whitespace from a margi

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -10,7 +10,7 @@
 }
 
 .horizontal:before {
-  content: '';
+  content: "";
   position: absolute;
   width: 0;
   height: 2px;
@@ -89,15 +89,13 @@
   display: flex;
   margin-left: 8%;
   margin-right: 8%;
-  margin-top: 1%;
-  margin-bottom: 1%;
+  padding-top: 1%;
+  padding-bottom: 1%;
 }
 
 .blogPostBar {
   background-color: #dae5ff;
-  padding-bottom: 0.5%;
 }
 
-.nonBlogPostBar {
-  padding-bottom: 0.5%;
-}
+/* .nonBlogPostBar {
+} */
